--- a/src/Components/Numbers/Numbers.module.css
+++ b/src/Components/Numbers/Numbers.module.css
@@ -1,4 +1,5 @@
 .Container{
+    user-select: none;  
     border-bottom: 3px double #9FBFD0;
     overflow: scroll;
 }
@@ -20,4 +21,5 @@ table {
     margin: 20px;
     padding-top: 5px;
     font-size: 24px;
+    background-color: transparent;
 }
