--- a/src/Components/Boxes/Boxes.module.css
+++ b/src/Components/Boxes/Boxes.module.css
@@ -2,17 +2,22 @@
 .Container{
     color: #9FBFD0;
     display: flex; 
-    max-width: 1020px;
+    max-width: 1500px;
     width: 100%;
     margin: 5px auto;
     justify-content: space-between;
-    padding-top: 5px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 30px;
+    user-select: none;  
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none;    /* Firefox */
+    -ms-user-select: none;  /* Internet Explorer/Edge */
 }
 
 .BoxContainer{
     width: 200px;
     display: block;
+    margin: 0 30px;
 }
 
 .Box{
