--- a/src/Components/Numbers/Numbers.module.css
+++ b/src/Components/Numbers/Numbers.module.css
@@ -26,7 +26,7 @@ table {
 
 .Number{
     user-select: none;  
-    margin: 20px;
+    margin: 5px 15px;
     padding-top: 0px;
     font-size: 24px;
     background-color: transparent;
